samples/_failures_safe/1761299443_e4c109_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0967e508.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_0967e508.c:175:9: error: expected declaration or statement at end of input
  175 |         }
      |         ^
./samples/SAFE/__tmp_0967e508.c:175:9: error: expected declaration or statement at end of input
